@@ -842,9 +842,11 @@ return $caption;
 			showExpressionErrors($expression, $expressionData[$expression]['errors']);
 			return false;
 		}
-		if( !validate_trigger_dependency($expression, $deps))
+		if( !validate_trigger_dependency($expression, $deps)){
+			error(S_WRONG_DEPENDENCY_ERROR);
 			return false;
-
+		}
+		
 		if(CTrigger::exists(array('description' => $description, 'expression' => $expression))){
 			error('Trigger '.$description.' already exists');
 			return false;
@@ -1871,7 +1873,10 @@ return $caption;
 			return false;
 		}
 
-		if(!validate_trigger_dependency($expression, $deps)) return false;
+		if(!validate_trigger_dependency($expression, $deps)) {
+			error(S_WRONG_DEPENDENCY_ERROR);
+			return false;
+		}
 
 		if(is_null($description)){
 			$description = $trigger['description'];
@@ -2263,25 +2268,35 @@ return $caption;
 	function validate_trigger_dependency($expression, $deps) {
 		$result = true;
 
+		//if we have atleast one dependency
 		if(!empty($deps)){
 			$templates = array();
 			$templateids = array();
+			$templated_trigger = false;
 			$db_triggerhosts = get_hosts_by_expression($expression);
+
 			while($triggerhost = DBfetch($db_triggerhosts)){
-				if($triggerhost['status'] == HOST_STATUS_TEMPLATE){ //template
+				if($triggerhost['status'] == HOST_STATUS_TEMPLATE){
 					$templates[$triggerhost['hostid']] = $triggerhost;
 					$templateids[$triggerhost['hostid']] = $triggerhost['hostid'];
+					$templated_trigger = true;
 				}
 			}
 
 			$dep_templateids = array();
 			$db_dephosts = get_hosts_by_triggerid($deps);
 			while($dephost = DBfetch($db_dephosts)) {
-				if($dephost['status'] == HOST_STATUS_TEMPLATE){ //template
+				if($templated_dep = ($dephost['status'] == HOST_STATUS_TEMPLATE)){
 					$templates[$dephost['hostid']] = $dephost;
 					$dep_templateids[$dephost['hostid']] = $dephost['hostid'];
 				}
+				
+				//we have a host trigger added to template trigger or otherwise
+				if($templated_trigger != $templated_dep){
+					return false;
+				}
 			}
+
 
 			$tdiff = array_diff($dep_templateids, $templateids);
 			if(!empty($templateids) && !empty($dep_templateids) && !empty($tdiff)){
